# letterboxd2notion

./: .editorconfig  .env.example  CLAUDE.md  Makefile  README.md  mypy.ini  pyproject.toml  requirements.txt
.claude/: settings.local.json
letterboxd2notion/: config.py  letterboxd.py  main.py
scripts/: run.bat
src/letterboxd2notion/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  models.py
src/letterboxd2notion/notion/: __init__.py  client.py  schema.py  sync.py
src/letterboxd2notion/parsers/: __init__.py  rss_parser.py
